--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "csurf": "^1.11.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-json": "^1.0.0",
     "express-session": "^1.17.3",
+    "jalali-moment": "^3.3.11",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.1",
     "nodemailer": "^6.9.1"
   },
