--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4",
     "mongoose": "^7.2.1",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "socket.io": "^4.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
