--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-json": "^1.0.0",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "jalali-moment": "^3.3.11",
     "moment": "^2.29.4",
     "mongoose": "^7.2.1",
